# RDF-knowledge-graph-construction

./: .gitignore  EBI_search_all_categories_to_tsv.py  How_we_built_the_PDN2RDF_pipeline.docx  README.md  curl2RDF.py  demo.py  etl_ENA_REST.py  pyproject.toml  sparql-examples.csv  testCaller.py
SPARQL/: location.rq  pathogens.rq  pathogensInRegions.rq  propertyID.rq  relationViz.rq  simpleDistinctTypes.rq
data/: JSONSchema.json  Pathogen_schema.json  Pathogen_schemav2.json  example.json  example2.json  japan.json  sparql-examples.json  template0.json
data/input/: download_from_ebisearch.sh  japan.tsv  mpox.curl.cmd  mpox.curl.sh  virus.tsv
data/output/: SRR19428465.jsonld  SRR19428466.jsonld  SRR19428466.nt  SRR19504273.jsonld  SRR19504273.nt
defs/: ENA_tax_eq.py  Tool_Pathogen_Class.py  Tool_Pathogen_Name_from_Taxon_ID.py
docs/: README.md  syntheticQuestions.md  triplestore.md
triplestore/: README.md
triplestore/BV-BRC/: Qleverfile  Qleverfile-ui.yml  bvbrc.index-log.txt  bvbrc.index.ops  bvbrc.index.osp  bvbrc.index.patterns  bvbrc.index.pos  bvbrc.index.pso  bvbrc.index.sop  bvbrc.index.spo  bvbrc.internal.index.pos  bvbrc.internal.index.pso  bvbrc.meta-data.json  bvbrc.server-log.txt  bvbrc.ui-db.sqlite3  bvbrc.vocabulary.codebooks  bvbrc.vocabulary.words.external  bvbrc.vocabulary.words.external.offsets  bvbrc.vocabulary.words.internal  bvbrc.vocabulary.words.internal.ids  decoder.index-log.txt  decoder.index.ops  decoder.index.osp  decoder.index.patterns  decoder.index.pos  decoder.index.pso  decoder.index.sop  decoder.index.spo  decoder.meta-data.json  (+9 more)
(+12 files in other folders)
