[project]
name = "rdf-knowledge-graph-construction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.3",
    "pyld>=2.0.4",
    "qlever>=0.5.33",
    "rdflib>=7.4.0",
    "requests>=2.32.5",
    "openai >=2.7.2",
    "chainlit >=2.8.1",
    "sparql_llm >=0.1.2",    
]